tests/models/struct/unnamed/string/fail/max_length.stderr
error: custom attribute panicked
 --> tests/models/struct/unnamed/string/fail/max_length.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected integer literal")
